--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Kacper's Services</title>
+<title>Kacper's Servicesss</title>
 </head>
 <body style="background-color:rgb(92, 214, 92);">
 <h1 style ="text-align:center;font-size:60;text-decoration:underline;">Kacper's Services</h1>
