--- a/calculator.html
+++ b/calculator.html
@@ -33,7 +33,7 @@ font-size:25;
 <br>
 <input style="width:95px;" type="button" value="0" onclick="display('0')">
 <input style="width:30px;text-align:center;"type="button" value="-" onclick="display('-')">
-<p style="position: fixed;bottom:0;width:100%;"><b>Credit to CEO of Johnny Airlines (<a href=johnny-airlines.co.uk>Johnny Airlines</a>) for loads of help!</b></p>
+<p style="position: fixed;bottom:0;width:100%;"><b>Credit to CEO of (<a href=johnny-airlines.co.uk>Johnny Airlines</a>)  for loads of help!</b></p>
    
 
 
